--- a/overlay/frameworks/base/packages/SystemUI/res/values/config.xml
+++ b/overlay/frameworks/base/packages/SystemUI/res/values/config.xml
@@ -34,4 +34,17 @@
 
     <!-- Should "4G" be shown instead of "LTE" when the network is NETWORK_TYPE_LTE? -->
     <bool name="config_show4GForLTE">false</bool>
+	
+    <!--
+        Hardware 'face' keys present on the device, stored as a bit field.
+        This integer should equal the sum of the corresponding value for each of the following keys present:
+            1 - Home
+            2 - Back
+            4 - Menu
+            8 - Assistant (search)
+            16 - App switch
+            64 - Volume rocker
+        For example, a device with Home, Back and Menu keys would set this config to 7.
+    -->
+    <integer name="config_deviceHardwareKeys">64</integer>
 </resources>
